# Stepik_Parsing

./: .gitignore  pyproject.toml
Stepik_Parsing/: 03_requests_lib.py  04_bs4_lib.py  05_selenium.py  chat_data.json  fake_user_agent.py  main.py  my_session.session  phone_info.json  proxy1.txt  proxy2.txt  result.csv  verified_proxy.txt  verified_proxy1.txt
Stepik_Parsing/chrome_ext_pak/: coordinates.crx
Stepik_Parsing/proxy_chek_prog/: proxy_check.py  proxy_list.txt
Stepik_Parsing/results/: all_goods_info.json
