[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
bs4 = "^0.0.1"
requests = "^2.31.0"
fake-useragent = "1.3.0"
lxml = "^4.9.3"
html5lib = "^1.1"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
sympy = "^1.12"
aiohttp = "^3.10.1"
codetiming = "^1.4.0"
aiofiles = "^24.1.0"
aiohttp-socks = "^0.9.0"
aiohttp-retry = "^2.8.3"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"